Fix Who We Are header display on small screens
Per bug https://trello.com/c/cwzlEp6C

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -131,6 +131,10 @@ sup {
     padding: 8rem 1.5rem 0;
     text-align: center;
 
+    @media (max-width: #{breakpoints(tablet)}) {
+        text-align: left;
+    }
+
     h1 {
         line-height: 1;
     }
